<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<TextView
    android:text="@string/chuyenkhoan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="24sp"
    android:textColor="#000000"
    android:layout_margin="10dp"
    >

</TextView>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuvi"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            ></TextView>
        <TextView
            android:id="@+id/tenvichuyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tenvi"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            ></TextView>

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/denvi"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            ></TextView>
        <Spinner
            android:id="@+id/spnchonvi"
            android:layout_width="250dp"
            android:layout_height="50dp"
            ></Spinner>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sotien2"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            ></TextView>
        <EditText
            android:id="@+id/sotien"
            android:text="0"
            android:textSize="30dp"
            android:background="@drawable/edittext2"
            android:inputType="number"
            android:textAlignment="viewEnd"
            android:paddingRight="40dp"
            android:layout_width="250dp"
            android:layout_height="50dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/huy"
            android:text="@string/huy"
            android:background="@drawable/button2"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:id="@+id/xn"
            android:background="@drawable/button2"
            android:text="@string/xacnhan"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>


</LinearLayout>