<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="10"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_weight="1"
        android:background="#0D8CFB"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >
        <TextView
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/baocaotc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

    </FrameLayout>

    <FrameLayout
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/bclstc"
                        android:background="@drawable/background_baocao"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_sell"
                            ></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/lsthuchi"
                            android:textColor="#000000"
                            android:textSize="14dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/reporthangmuc"
                        android:background="@drawable/background_baocao"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/pie_chart"
                            ></ImageView>
                        <TextView
                            android:layout_margin="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phantichtheohm"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            >
                        </TextView>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/bdtc"
                        android:background="@drawable/background_baocao"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/bieudo"
                            ></ImageView>
                        <TextView
                            android:layout_margin="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phantichthoethang"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            >
                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/background_baocao"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/graph"
                            ></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/taichinh"
                            android:textColor="#000000"
                            android:textSize="14dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="@drawable/background_baocao"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/deposit"
                            ></ImageView>
                        <TextView
                            android:layout_margin="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/theodoivayno"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            >
                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/background_baocao"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/calendar"
                            ></ImageView>
                        <TextView
                            android:layout_margin="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chuyendi"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            >
                        </TextView>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="@drawable/background_baocao"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/presentation"
                            ></ImageView>
                        <TextView
                            android:layout_margin="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phantich"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            >
                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/background_baocao"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/goal"
                            ></ImageView>
                        <TextView
                            android:layout_margin="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hanmuc"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            >
                        </TextView>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>